# festival

./: .dockerignore  .env.development  .env.example  .env.test  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOSSIER_FINAL_FESTIVAL_CTO.md  Dockerfile  Dockerfile.dev  README.md  VERCEL_DEPLOYMENT.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  skaffold.yaml  tsconfig.base.json  tsconfig.json
.claude/: BUSINESS_PLAN.md  CTO_MISSION.md  CTO_PLAN_Q2_Q3_2026.md  DONE.md  IN_PROGRESS.md
.github/workflows/: cd.yml  ci.yml  mobile-build.yml  pr-checks.yml  release.yml
.github/workflows.disabled/: database-migration.yml  deploy-admin.yml  deploy-api.yml  deploy-production.yml  deploy-staging.yml  deploy-web.yml  mobile.yml  release.yml
.storybook/: main.ts  preview.ts  tsconfig.json
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-test-coverage-api.md  sprint-stability.yaml  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics.md  prd.md
api/: Dockerfile  jest.config.ts  project.json  tsconfig.spec.json
api-e2e/: tsconfig.spec.json
docs/: ARCHITECTURE.md  CTO_BRIEFING.md  DATABASE_SEEDING.md  DEPLOYMENT.md  DEVELOPMENT.md  KUBERNETES_DEPLOYMENT.md  MOBILE_PERFORMANCE_AUDIT.md  OAUTH_SETUP.md  TEAM_SCALING_PROPOSAL.md  TROUBLESHOOTING.md  index.md  project-scan-report.json  sentry-alerts-configuration.md  source-tree.md
festival/: .env.development  .env.example  .env.production  .gitignore  .prettierignore  .prettierrc  .vercelignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  jest.preset.js  nixpacks.toml  nx.json  package-lock.json  package.json  railway.toml  tsconfig.base.json  vercel.json
k8s/: configmap.yaml  kind-config.yaml  kustomization.yaml  namespace.yaml  secrets.yaml
monitoring/: docker-compose.monitoring.yml
prisma/: DATABASE.md  schema.prisma  seed-summerstromming.ts  seed.ts
redis/: README.md  docker-compose.redis.yml  redis-master.conf  redis-replica.conf  sentinel.conf
scripts/: check-env.sh  deploy.sh  dev.sh  docker-dev.sh  health-check.sh  load-test.ts  rotate-secrets.sh  seed-if-empty.sh  start-dev.sh  start.sh  verify-all.sh  verify-api.sh  verify-ci.sh  verify-data.sh  verify-frontend.sh
services/ai/: Dockerfile  docker-compose.ai.yml  pyproject.toml
services/ai/src/: __init__.py  config.py
services/ai/src/models/fraud/: anomaly_detection.py  pattern_recognition.py  risk_scorer.py
services/ai/src/models/recommendations/: collaborative_filtering.py  feature_extractor.py
stories/: Alert.stories.tsx  Breadcrumb.stories.tsx  Checkbox.stories.tsx  DesignTokens.stories.tsx  Dropdown.stories.tsx  Pagination.stories.tsx  Progress.stories.tsx  Radio.stories.tsx  Select.stories.tsx  Skeleton.stories.tsx  Switch.stories.tsx  Table.stories.tsx  Tabs.stories.tsx  Tooltip.stories.tsx
(+2307 files in other folders)
